// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Openapi V2 |> renderDefinitionCode should render 1 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import { MessageContent } from \\"./MessageContent\\";
import * as t from \\"io-ts\\";

// required attributes
const MessageR = t.interface({
  id: t.string,

  content: MessageContent
});

// optional attributes
const MessageO = t.partial({
  sender_service_id: t.string
});

export const Message = t.exact(t.intersection([MessageR, MessageO], \\"Message\\"));

export type Message = t.TypeOf<typeof Message>;
"
`;

exports[`Openapi V2 |> renderDefinitionCode should render 2 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import * as t from \\"io-ts\\";

// required attributes
const DefinitionFieldWithDashR = t.interface({});

// optional attributes
const DefinitionFieldWithDashO = t.partial({
  \\"id-field\\": t.string
});

export const DefinitionFieldWithDash = t.exact(
  t.intersection(
    [DefinitionFieldWithDashR, DefinitionFieldWithDashO],
    \\"DefinitionFieldWithDash\\"
  )
);

export type DefinitionFieldWithDash = t.TypeOf<typeof DefinitionFieldWithDash>;
"
`;

exports[`Openapi V2 |> renderDefinitionCode should render RequestTypes for octet-stream 1`] = `
"// DO NOT EDIT THIS FILE
// This file has been generated by gen-api-models
// eslint-disable sonar/max-union-size
// eslint-disable sonarjs/no-identical-functions

import * as t from \\"io-ts\\";

import * as r from \\"@pagopa/ts-commons/lib/requests\\";

/****************************************************************
 * testBinaryFileDownload
 */

// Request type definition
export type TestBinaryFileDownloadT = r.IGetApiRequestType<
  {},
  never,
  never,
  r.IResponseType<200, Buffer, never>
>;

export const testBinaryFileDownloadDefaultResponses = {
  200: Buffer
};

export type TestBinaryFileDownloadResponsesT<A0 = Buffer, C0 = Buffer> = {
  200: t.Type<A0, C0>;
};

export function testBinaryFileDownloadDecoder<A0 = Buffer, C0 = Buffer>(
  overrideTypes:
    | Partial<TestBinaryFileDownloadResponsesT<A0, C0>>
    | t.Type<A0, C0>
    | undefined = {}
): r.ResponseDecoder<r.IResponseType<200, A0, never>> {
  const isDecoder = (d: any): d is t.Type<A0, C0> =>
    typeof d[\\"_A\\"] !== \\"undefined\\";

  const type = {
    ...((testBinaryFileDownloadDefaultResponses as unknown) as TestBinaryFileDownloadResponsesT<
      A0,
      C0
    >),
    ...(isDecoder(overrideTypes) ? { 200: overrideTypes } : overrideTypes)
  };

  const d200 = (r.bufferArrayResponseDecoder(200) as any) as r.ResponseDecoder<
    r.IResponseType<200, A0, never>
  >;

  return d200;
}

// Decodes the success response with the type defined in the specs
export const testBinaryFileDownloadDefaultDecoder = () =>
  testBinaryFileDownloadDecoder();
"
`;

exports[`Openapi V3 |> renderDefinitionCode should render 1 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import { MessageContent } from \\"./MessageContent\\";
import * as t from \\"io-ts\\";

// required attributes
const MessageR = t.interface({
  id: t.string,

  content: MessageContent
});

// optional attributes
const MessageO = t.partial({
  sender_service_id: t.string
});

export const Message = t.exact(t.intersection([MessageR, MessageO], \\"Message\\"));

export type Message = t.TypeOf<typeof Message>;
"
`;

exports[`Openapi V3 |> renderDefinitionCode should render 2 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import * as t from \\"io-ts\\";

// required attributes
const DefinitionFieldWithDashR = t.interface({});

// optional attributes
const DefinitionFieldWithDashO = t.partial({
  \\"id-field\\": t.string
});

export const DefinitionFieldWithDash = t.exact(
  t.intersection(
    [DefinitionFieldWithDashR, DefinitionFieldWithDashO],
    \\"DefinitionFieldWithDash\\"
  )
);

export type DefinitionFieldWithDash = t.TypeOf<typeof DefinitionFieldWithDash>;
"
`;

exports[`Openapi V3 |> renderDefinitionCode should render RequestTypes for octet-stream 1`] = `
"// DO NOT EDIT THIS FILE
// This file has been generated by gen-api-models
// eslint-disable sonar/max-union-size
// eslint-disable sonarjs/no-identical-functions

import * as t from \\"io-ts\\";

import * as r from \\"@pagopa/ts-commons/lib/requests\\";

/****************************************************************
 * testBinaryFileDownload
 */

// Request type definition
export type TestBinaryFileDownloadT = r.IGetApiRequestType<
  {},
  never,
  never,
  r.IResponseType<200, Buffer, never>
>;

export const testBinaryFileDownloadDefaultResponses = {
  200: Buffer
};

export type TestBinaryFileDownloadResponsesT<A0 = Buffer, C0 = Buffer> = {
  200: t.Type<A0, C0>;
};

export function testBinaryFileDownloadDecoder<A0 = Buffer, C0 = Buffer>(
  overrideTypes:
    | Partial<TestBinaryFileDownloadResponsesT<A0, C0>>
    | t.Type<A0, C0>
    | undefined = {}
): r.ResponseDecoder<r.IResponseType<200, A0, never>> {
  const isDecoder = (d: any): d is t.Type<A0, C0> =>
    typeof d[\\"_A\\"] !== \\"undefined\\";

  const type = {
    ...((testBinaryFileDownloadDefaultResponses as unknown) as TestBinaryFileDownloadResponsesT<
      A0,
      C0
    >),
    ...(isDecoder(overrideTypes) ? { 200: overrideTypes } : overrideTypes)
  };

  const d200 = (r.bufferArrayResponseDecoder(200) as any) as r.ResponseDecoder<
    r.IResponseType<200, A0, never>
  >;

  return d200;
}

// Decodes the success response with the type defined in the specs
export const testBinaryFileDownloadDefaultDecoder = () =>
  testBinaryFileDownloadDecoder();
"
`;
